force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/tc9_et__Rate_Calculator_Rate__c.object-meta.xml
<CustomObject>
    <description>A child object to the Rates Calculator that holds individual Pay Rate details to be used in the calculation of Rate Calculator Lines</description>
    <label>Rate Calculator Rate</label>
    <nameField>
        <displayFormat>RCR-{0000000000}</displayFormat>
        <label>Rate Calculator Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Calculator Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>