force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Assignment that applies to the Rate Record</description>
    <inlineHelpText>Defines the Assignment that applies to the Rate Record</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipName>Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>