force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Custom_Pay_Rate_1__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Custom_Pay_Rate_1__c</fullName>
    <description>To be used for custom rate calculator calculations outside of standard product.</description>
    <inlineHelpText>To be used for custom rate calculator calculations outside of standard product.</inlineHelpText>
    <label>Custom Pay Rate 1</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>