force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Effective_Date__c</fullName>
    <description>The Date that the Rate Calculator Rate will become Effective</description>
    <inlineHelpText>The Date that the Rate Calculator Rate will become Effective</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>