force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Employee that applies to the Rate Calculator Rate</description>
    <inlineHelpText>Defines the Employee that applies to the Rate Calculator Rate</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rate Calculator Rates</relationshipLabel>
    <relationshipName>Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>