force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Entered_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Entered_Rate__c</fullName>
    <description>The Rate the User has entered to be used in calculating Rate Calculator lines</description>
    <inlineHelpText>The Rate the User has entered to be used in calculating Rate Calculator lines</inlineHelpText>
    <label>Entered Rate</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>