force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Interpretation_Rule_Pay_Codes__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Interpretation_Rule_Pay_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if all the Pay Codes detailed within the related Interpretation Rule should be automatically added to a Rate Calculator. When unchecked, Pay Codes must be added manually</description>
    <inlineHelpText>Indicates if all the Pay Codes detailed within the related Interpretation Rule should be automatically added to a Rate Calculator. When unchecked, Pay Codes must be added manually</inlineHelpText>
    <label>Interpretation Rule Pay Codes</label>
    <type>Checkbox</type>
</CustomField>