force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Minimum_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the value of the minimum pay rate that was used to create the rate calculator rate record.</description>
    <inlineHelpText>Stores the value of the minimum pay rate that was used to create the rate calculator rate record.</inlineHelpText>
    <label>Minimum Pay Rate</label>
    <referenceTo>tc9_et__Minimum_Pay_Rate__c</referenceTo>
    <relationshipLabel>Rate Calculator Rates</relationshipLabel>
    <relationshipName>Rate_Calculator_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>