force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Minimum_Pay_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate_Details__c</fullName>
    <description>Holds data specific to the automation of Minimum Pay Rates for Rate Calculation</description>
    <inlineHelpText>Holds data specific to the automation of Minimum Pay Rates for Rate Calculation</inlineHelpText>
    <label>Minimum Pay Rate Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>