force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Minimum_Pay_Rate_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Minimum_Pay_Rate_Id__c</fullName>
    <description>Stores the value of the minimum pay rate ID that was used to create the rate calculator rate record.</description>
    <inlineHelpText>Stores the value of the minimum pay rate ID that was used to create the rate calculator rate record.</inlineHelpText>
    <label>Minimum Pay Rate Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>