force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Parent_Rate_Calculator_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Parent_Rate_Calculator_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Parent Rate Calculator Rate that applies to the Rate Calculator Rate</description>
    <inlineHelpText>Defines the Parent Rate Calculator Rate that applies to the Rate Calculator Rate</inlineHelpText>
    <label>Parent Rate Calculator Rate</label>
    <referenceTo>tc9_et__Rate_Calculator_Rate__c</referenceTo>
    <relationshipLabel>Rate Calculator Rates (Rate Calculator Rate)</relationshipLabel>
    <relationshipName>Rate_Calculator_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>