force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Pay_Codes_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Pay_Codes_Applied__c</fullName>
    <description>Defines the Record IDs of the Pay Codes that apply to the Rate Calculator Rate</description>
    <inlineHelpText>Defines the Record IDs of the Pay Codes that apply to the Rate Calculator Rate</inlineHelpText>
    <label>Pay Codes Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>