force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Primary_Rate_Calculator_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Primary_Rate_Calculator_Rate__c</fullName>
    <description>System field to manage the UI block for the non-Primary Rate Calculator Rate records where it is linked to the Rate Calculator Rate with Primary Record set to true.</description>
    <inlineHelpText>System field to manage the UI block for the non-Primary Rate Calculator Rate records where it is linked to the Rate Calculator Rate with Primary Record set to true.</inlineHelpText>
    <label>Primary Rate Calculator Rate</label>
    <length>36</length>
    <type>Text</type>
</CustomField>