force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Rate_Calculator__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Rate_Calculator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Rate Calculator that applies to the Rate Calculator Rate</description>
    <inlineHelpText>Defines the Rate Calculator that applies to the Rate Calculator Rate</inlineHelpText>
    <label>Rate Calculator</label>
    <referenceTo>tc9_et__Rate_Calculator__c</referenceTo>
    <relationshipLabel>Rate Calculator Rates</relationshipLabel>
    <relationshipName>Rate_Records</relationshipName>
    <type>Lookup</type>
</CustomField>