force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/fields/tc9_et__Update_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Update_with_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies it the Rate Calculator Rate will be updated automatically if the Parent Rate Record is updated</description>
    <inlineHelpText>Identifies it the Rate Calculator Rate will be updated automatically if the Parent Rate Record is updated</inlineHelpText>
    <label>Update with Parent</label>
    <type>Checkbox</type>
</CustomField>