force-app/main/default/objects/tc9_et__Rate_Calculator_Rate__c/recordTypes/tc9_et__Employee_Specific.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Employee_Specific</fullName>
    <active>true</active>
    <description>To be used for Rate Record where it is specific to an Employee</description>
    <label>Employee Specific</label>
</RecordType>